[package]
name = "yosowss-rand-beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = { version = "^0.4.0", features = [ "std" ] }
ark-ff = { version = "^0.4.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.4.0", features = [ "std" ] }
ark-std = { version = "^0.4.0", default-features = false }
rayon = {version = "1", optional = true}
ark-serialize = { version = "^0.4.2", default-features = false, features = ["derive"] }
derivative = {version = "2", default-features = false, features = ["use_core"]}
bincode = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7"

[dev-dependencies]
rand = "0.7"

[features]
std = ["ark-std/std", "ark-ff/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel"]
